--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   provider: ^6.0.1
   location: ^4.3.0
   geocoding: ^2.0.1
+  geolocator: ^8.0.1
 
 dev_dependencies:
   flutter_test:
