--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  google_maps_flutter: ^2.1.1
   cupertino_icons: ^1.0.2
   firebase_auth: ^3.1.3
   firebase_core: ^1.8.0
