tradesman can delete a job and fixed a few issues around there. tradesman profile page updates with job added and like gained.  normal user can like a tradesman profile and it adds that specific tradesman into a favourites list in firebase, still have to make a page for this though so a normal user can see their favourite tradesman

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   geolocator: ^8.0.1
   image_picker: ^0.8.4+4
   firebase_storage: ^10.2.5
+  like_button: ^2.0.4
   
 
 dev_dependencies:
